--- a/SApp/Presentation/SearchMovies/View/SearchMovies.storyboard
+++ b/SApp/Presentation/SearchMovies/View/SearchMovies.storyboard
@@ -16,8 +16,72 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="g5m-k0-nhZ">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="164" id="hdS-Oz-Rrv" userLabel="MovieItemCell">
+                                        <rect key="frame" x="0.0" y="24.5" width="320" height="164"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hdS-Oz-Rrv" id="a80-Ku-Jxt" customClass="MovieViewCell" customModule="SApp" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="164"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Yq8-gG-ZsC">
+                                                    <rect key="frame" x="5" y="10" width="53" height="68.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEq-3a-ihK">
+                                                            <rect key="frame" x="0.0" y="0.0" width="53" height="19.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1sv-SP-XU8">
+                                                            <rect key="frame" x="0.0" y="29.5" width="53" height="14.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VOC-Mw-sS0">
+                                                            <rect key="frame" x="0.0" y="54" width="53" height="14.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <color key="textColor" systemColor="tertiaryLabelColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="13K-Am-t0w" userLabel="MovieImage">
+                                                    <rect key="frame" x="197" y="10" width="118" height="144"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="13K-Am-t0w" firstAttribute="top" secondItem="a80-Ku-Jxt" secondAttribute="top" constant="10" id="4rD-7F-ctu"/>
+                                                <constraint firstItem="Yq8-gG-ZsC" firstAttribute="top" secondItem="a80-Ku-Jxt" secondAttribute="top" constant="10" id="O3h-Am-fC5"/>
+                                                <constraint firstItem="13K-Am-t0w" firstAttribute="leading" secondItem="Yq8-gG-ZsC" secondAttribute="trailing" constant="139" id="OTC-aP-s3M"/>
+                                                <constraint firstItem="Yq8-gG-ZsC" firstAttribute="leading" secondItem="a80-Ku-Jxt" secondAttribute="leading" constant="5" id="Wk2-Hf-vzJ"/>
+                                                <constraint firstAttribute="bottom" secondItem="13K-Am-t0w" secondAttribute="bottom" constant="10" id="ZL9-gd-na6"/>
+                                                <constraint firstAttribute="trailing" secondItem="13K-Am-t0w" secondAttribute="trailing" constant="5" id="ZWJ-iu-HWg"/>
+                                            </constraints>
+                                            <connections>
+                                                <outlet property="dateLabel" destination="1sv-SP-XU8" id="FpK-Az-Rgt"/>
+                                                <outlet property="movieImageView" destination="13K-Am-t0w" id="wsk-su-sie"/>
+                                                <outlet property="overviewLabel" destination="VOC-Mw-sS0" id="ghr-9Q-aD3"/>
+                                                <outlet property="titleLabel" destination="MEq-3a-ihK" id="phG-Jv-Q1b"/>
+                                            </connections>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="g5m-k0-nhZ" secondAttribute="trailing" id="LQb-bK-mAm"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="g5m-k0-nhZ" secondAttribute="bottom" id="UOy-J1-Ck5"/>
+                            <constraint firstItem="g5m-k0-nhZ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="fmY-h2-Jie"/>
+                            <constraint firstItem="g5m-k0-nhZ" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="meL-hj-FWV"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="g5m-k0-nhZ" secondAttribute="bottom" id="ouZ-vQ-7iy"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="search" id="pTl-nK-NcH"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
@@ -28,8 +92,11 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tertiaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
