--- a/SApp/Presentation/SearchMovies/View/SearchMovies.storyboard
+++ b/SApp/Presentation/SearchMovies/View/SearchMovies.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gy4-dU-gQv">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -10,40 +10,85 @@
     </dependencies>
     <scenes>
         <!--Search Movies View Controller-->
-        <scene sceneID="s0d-6b-0kx">
+        <scene sceneID="yBc-Ta-s3E">
             <objects>
-                <viewController storyboardIdentifier="SearchMoviesViewController" id="Y6W-OH-hqX" customClass="SearchMoviesViewController" customModule="SApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
+                <viewController storyboardIdentifier="SearchMoviesViewController" id="gy4-dU-gQv" customClass="SearchMoviesViewController" customModule="SApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NeQ-HL-ZKO">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="g5m-k0-nhZ">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="All-FD-LNy">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="u5r-yj-4ue"/>
+                                </constraints>
+                            </view>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hp8-ZD-zwE">
+                                <rect key="frame" x="0.0" y="50" width="320" height="469"/>
+                                <connections>
+                                    <segue destination="wzp-C2-fCl" kind="embed" id="rD5-Wd-T7w"/>
+                                </connections>
+                            </containerView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="wj6-5U-I63"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="All-FD-LNy" firstAttribute="top" secondItem="wj6-5U-I63" secondAttribute="top" id="DPv-jR-fFD"/>
+                            <constraint firstItem="All-FD-LNy" firstAttribute="leading" secondItem="wj6-5U-I63" secondAttribute="leading" id="Lv6-1q-XDJ"/>
+                            <constraint firstItem="hp8-ZD-zwE" firstAttribute="top" secondItem="All-FD-LNy" secondAttribute="bottom" id="erf-tl-xDW"/>
+                            <constraint firstItem="hp8-ZD-zwE" firstAttribute="leading" secondItem="NeQ-HL-ZKO" secondAttribute="leading" id="hU3-8M-w5r"/>
+                            <constraint firstItem="wj6-5U-I63" firstAttribute="bottom" secondItem="hp8-ZD-zwE" secondAttribute="bottom" id="hem-ek-rMq"/>
+                            <constraint firstItem="wj6-5U-I63" firstAttribute="trailing" secondItem="hp8-ZD-zwE" secondAttribute="trailing" id="ppd-L9-Nfk"/>
+                            <constraint firstItem="wj6-5U-I63" firstAttribute="trailing" secondItem="All-FD-LNy" secondAttribute="trailing" id="wQg-QD-RNR"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="search" id="5G9-D0-O5Q"/>
+                    <navigationItem key="navigationItem" id="Rwv-xv-XWx"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="searchBarContainer" destination="All-FD-LNy" id="1IR-bK-eRf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OgW-vP-STE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-120" y="225"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="JGO-U1-wda">
+            <objects>
+                <viewController id="wzp-C2-fCl" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vdv-De-zKx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="469"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="shy-kA-ftj">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="469"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="164" id="hdS-Oz-Rrv" userLabel="MovieItemCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="164" id="Ef3-dc-KFQ" userLabel="MovieItemCell">
                                         <rect key="frame" x="0.0" y="24.5" width="320" height="164"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hdS-Oz-Rrv" id="a80-Ku-Jxt" customClass="MovieViewCell" customModule="SApp" customModuleProvider="target">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ef3-dc-KFQ" id="c1S-gk-7iF" customClass="MovieViewCell" customModule="SApp" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="164"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Yq8-gG-ZsC">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xfq-N6-oig">
                                                     <rect key="frame" x="5" y="10" width="53" height="68.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEq-3a-ihK">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="udU-Ex-EQ2">
                                                             <rect key="frame" x="0.0" y="0.0" width="53" height="19.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1sv-SP-XU8">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K6r-PZ-KoG">
                                                             <rect key="frame" x="0.0" y="29.5" width="53" height="14.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VOC-Mw-sS0">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWh-o6-D69">
                                                             <rect key="frame" x="0.0" y="54" width="53" height="14.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <color key="textColor" systemColor="tertiaryLabelColor"/>
@@ -51,44 +96,42 @@
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="13K-Am-t0w" userLabel="MovieImage">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I6z-8X-MCk" userLabel="MovieImage">
                                                     <rect key="frame" x="197" y="10" width="118" height="144"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="13K-Am-t0w" firstAttribute="top" secondItem="a80-Ku-Jxt" secondAttribute="top" constant="10" id="4rD-7F-ctu"/>
-                                                <constraint firstItem="Yq8-gG-ZsC" firstAttribute="top" secondItem="a80-Ku-Jxt" secondAttribute="top" constant="10" id="O3h-Am-fC5"/>
-                                                <constraint firstItem="13K-Am-t0w" firstAttribute="leading" secondItem="Yq8-gG-ZsC" secondAttribute="trailing" constant="139" id="OTC-aP-s3M"/>
-                                                <constraint firstItem="Yq8-gG-ZsC" firstAttribute="leading" secondItem="a80-Ku-Jxt" secondAttribute="leading" constant="5" id="Wk2-Hf-vzJ"/>
-                                                <constraint firstAttribute="bottom" secondItem="13K-Am-t0w" secondAttribute="bottom" constant="10" id="ZL9-gd-na6"/>
-                                                <constraint firstAttribute="trailing" secondItem="13K-Am-t0w" secondAttribute="trailing" constant="5" id="ZWJ-iu-HWg"/>
+                                                <constraint firstAttribute="bottom" secondItem="I6z-8X-MCk" secondAttribute="bottom" constant="10" id="2uc-Xf-MnE"/>
+                                                <constraint firstAttribute="trailing" secondItem="I6z-8X-MCk" secondAttribute="trailing" constant="5" id="8IM-uu-xmX"/>
+                                                <constraint firstItem="xfq-N6-oig" firstAttribute="top" secondItem="c1S-gk-7iF" secondAttribute="top" constant="10" id="L81-82-l0k"/>
+                                                <constraint firstItem="I6z-8X-MCk" firstAttribute="leading" secondItem="xfq-N6-oig" secondAttribute="trailing" constant="139" id="XHJ-pY-PVt"/>
+                                                <constraint firstItem="xfq-N6-oig" firstAttribute="leading" secondItem="c1S-gk-7iF" secondAttribute="leading" constant="5" id="i7m-E8-Ha9"/>
+                                                <constraint firstItem="I6z-8X-MCk" firstAttribute="top" secondItem="c1S-gk-7iF" secondAttribute="top" constant="10" id="lf9-oc-5Nx"/>
                                             </constraints>
                                             <connections>
-                                                <outlet property="dateLabel" destination="1sv-SP-XU8" id="FpK-Az-Rgt"/>
-                                                <outlet property="movieImageView" destination="13K-Am-t0w" id="wsk-su-sie"/>
-                                                <outlet property="overviewLabel" destination="VOC-Mw-sS0" id="ghr-9Q-aD3"/>
-                                                <outlet property="titleLabel" destination="MEq-3a-ihK" id="phG-Jv-Q1b"/>
+                                                <outlet property="dateLabel" destination="K6r-PZ-KoG" id="Edj-u4-OMf"/>
+                                                <outlet property="movieImageView" destination="I6z-8X-MCk" id="wQX-o1-ead"/>
+                                                <outlet property="overviewLabel" destination="gWh-o6-D69" id="A7F-Wl-pXD"/>
+                                                <outlet property="titleLabel" destination="udU-Ex-EQ2" id="NnC-0m-ROd"/>
                                             </connections>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
+                        <viewLayoutGuide key="safeArea" id="ycP-iG-mdu"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="g5m-k0-nhZ" secondAttribute="trailing" id="LQb-bK-mAm"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="g5m-k0-nhZ" secondAttribute="bottom" id="UOy-J1-Ck5"/>
-                            <constraint firstItem="g5m-k0-nhZ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="fmY-h2-Jie"/>
-                            <constraint firstItem="g5m-k0-nhZ" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="meL-hj-FWV"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="g5m-k0-nhZ" secondAttribute="bottom" id="ouZ-vQ-7iy"/>
+                            <constraint firstItem="ycP-iG-mdu" firstAttribute="bottom" secondItem="shy-kA-ftj" secondAttribute="bottom" id="31v-kX-95o"/>
+                            <constraint firstItem="shy-kA-ftj" firstAttribute="top" secondItem="ycP-iG-mdu" secondAttribute="top" id="c8B-Ff-Xhu"/>
+                            <constraint firstItem="ycP-iG-mdu" firstAttribute="trailing" secondItem="shy-kA-ftj" secondAttribute="trailing" id="evz-by-Mfy"/>
+                            <constraint firstItem="shy-kA-ftj" firstAttribute="leading" secondItem="ycP-iG-mdu" secondAttribute="leading" id="wyX-Yb-zaE"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="search" id="pTl-nK-NcH"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0f5-2n-64k" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="139"/>
+            <point key="canvasLocation" x="713" y="225"/>
         </scene>
     </scenes>
     <resources>
