--- a/SApp/Presentation/SearchMovies/View/SearchMovies.storyboard
+++ b/SApp/Presentation/SearchMovies/View/SearchMovies.storyboard
@@ -13,7 +13,7 @@
         <scene sceneID="Yax-SR-P0X">
             <objects>
                 <tableViewController id="jWQ-8i-41V" customClass="MoviesTableViewController" customModule="SApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="D1f-b8-78j">
+                    <tableView key="view" hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="D1f-b8-78j">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="459"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -115,13 +115,26 @@
                                     <segue destination="jWQ-8i-41V" kind="embed" identifier="MoviesTableViewController" id="M5d-eg-9nT"/>
                                 </connections>
                             </containerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search Movies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Pe-BH-up2">
+                                <rect key="frame" x="104.5" y="273.5" width="111.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="VvY-pl-RkJ">
+                                <rect key="frame" x="150" y="274" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="wj6-5U-I63"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="VvY-pl-RkJ" firstAttribute="centerY" secondItem="NeQ-HL-ZKO" secondAttribute="centerY" id="33e-Zs-tU8"/>
+                            <constraint firstItem="4Pe-BH-up2" firstAttribute="centerX" secondItem="NeQ-HL-ZKO" secondAttribute="centerX" id="8WE-tb-4S3"/>
                             <constraint firstItem="All-FD-LNy" firstAttribute="top" secondItem="wj6-5U-I63" secondAttribute="top" id="DPv-jR-fFD"/>
                             <constraint firstItem="All-FD-LNy" firstAttribute="leading" secondItem="wj6-5U-I63" secondAttribute="leading" id="Lv6-1q-XDJ"/>
+                            <constraint firstItem="VvY-pl-RkJ" firstAttribute="centerX" secondItem="NeQ-HL-ZKO" secondAttribute="centerX" id="cay-0a-Y3g"/>
                             <constraint firstItem="hp8-ZD-zwE" firstAttribute="top" secondItem="All-FD-LNy" secondAttribute="bottom" id="erf-tl-xDW"/>
+                            <constraint firstItem="4Pe-BH-up2" firstAttribute="centerY" secondItem="NeQ-HL-ZKO" secondAttribute="centerY" id="gYa-ui-h6P"/>
                             <constraint firstItem="hp8-ZD-zwE" firstAttribute="leading" secondItem="NeQ-HL-ZKO" secondAttribute="leading" id="hU3-8M-w5r"/>
                             <constraint firstItem="wj6-5U-I63" firstAttribute="bottom" secondItem="hp8-ZD-zwE" secondAttribute="bottom" id="hem-ek-rMq"/>
                             <constraint firstItem="wj6-5U-I63" firstAttribute="trailing" secondItem="hp8-ZD-zwE" secondAttribute="trailing" id="ppd-L9-Nfk"/>
@@ -132,7 +145,9 @@
                     <navigationItem key="navigationItem" id="Rwv-xv-XWx"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="loadingView" destination="VvY-pl-RkJ" id="kjc-We-Axj"/>
                         <outlet property="searchBarContainer" destination="All-FD-LNy" id="1IR-bK-eRf"/>
+                        <outlet property="titleLabel" destination="4Pe-BH-up2" id="bMn-UW-lyB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OgW-vP-STE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
